[package]
name = "Criptoly"
description = "Currency converter tool"
authors = ["Henry <contato@henrybarreto.dev>"]
repository = "https://github.com/henrybarreto/Cashly"
license = "MIT"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.125", features = ["derive"]}

