[package]
name = "Criptoly"
description = "This is a simple crate's lib to convert cryptocurrency values through APIs services."
authors = ["Henry <contato@henrybarreto.dev>"]
repository = "https://github.com/henrybarreto/Cryptoly"
license = "MIT"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.125", features = ["derive"]}

